--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -97,7 +97,7 @@
 
 @mixin scroll {
   height: 59em;
-  width: 360px;
+  // width: 360px;
   overflow-y: scroll;
   overflow-x: hidden;
   white-space: nowrap;
@@ -111,7 +111,7 @@
 }
 //responsive view scroll bar
 @mixin scrollB {
-  height: 20em;
+  // height: 20em;
   overflow-y: hidden;
   overflow-x: scroll;
   white-space: nowrap;
@@ -157,73 +157,92 @@
 ////////////////////////responsive code//////////////////////////
 @mixin desktopview {
   grid-template-areas:
-  'images images images images images images images images'
-  'section section section section section section section sidebar'
-  'sectiontwo sectiontwo sectiontwo sectiontwo sectiontwo sectiontwo sectiontwo sidebar'
-  'sectionthree sectionthree sectionthree sectionthree sectionthree sectionthree sectionthree sidebarTwo'
-  'sectionfour sectionfour sectionfour sectionfour sectionfour sectionfour sectionfour sidebarTwo';
+  'images images images images'
+  'section section section sidebar'
+  'sectiontwo sectiontwo sectiontwo sidebar'
+  'sectionthree sectionthree sectionthree sidebarTwo'
+  'sectionfour sectionfour sectionfour sidebarTwo';
   grid-column-gap: 10px;
   grid-row-gap: 0px;
 }
 
 ////////////////////////////Gallery//////////////////////////////
-
-/////////////////////////overlay code///////////////////////
-@mixin overlaycenter {
-  .overlay {
-    left: 0;
-    right: 0;
-    @include gradientOne;
-    overflow: hidden;
-    width: 100%;
-    transform:scale(0);
-  }
-  &:hover .overlay {
-  transform: scale(1)
-  }
+@mixin image {
+  width: 350px;
+  height: 254px;
+  background-size: cover;
+  overflow: hidden;
 }
-@mixin overlayright {
-  .overlay {
-    left: 100%;
-    right: 0;
-    width: 0;
-  }
-  &:hover .overlay {
-    width: 100%;
-    left: 0;
-  }
-}
-@mixin overlayleft {
-  .overlay {
-    left: 0;
-    right: 100%;
-    width: 0;
-  }
-  &:hover .overlay {
-    width: 100%;
-    right: 0;
-  }
-}
-@mixin overlay {
-  position: relative;
-  .overlay {
-    position: absolute;
-    bottom: 0;
-    @include gradientOne;
-    overflow: hidden;
-    height: 100%;
-    transition: .3s ease;
-    .text {
+@mixin gallery {
+  article {
+    height: 254px;
+    width: 350px;
+    p {
+      font-size: 14px;
       color: white;
-      font-size: 10px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
     }
   }
+  #button {
+    display: block;
+    width: 100%;
+    background-color: rgba(51, 51, 51, 0.5);
+    font-size: 40px;
+    border: 0;
+    cursor: pointer;
+  }
 }
+@mixin box {
+  margin-top: -20px;
+  position: relative;
+  background-color: $fireBrick;
+  transition: transform 0.5s ease-out;
+}
+@mixin firstbefore {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  opacity: 0.5;
+  z-index: -1;
+  display: block;
+  position: absolute;
+  content: '  ';
+  transition: transform 0.5s ease-out;
+}
+@mixin down {
+  transform: translateY(100%) translateY(-45px) translateZ(0);
+  &::before {
+    transform: translateY(-100%) translateY(45px) translateZ(0);
+  }
+}
+@mixin up {
+  transform: translateY(0) translateZ(0);
+  &::before {
+    transform: translateY(0) translateZ(0);
+  }
+}
+////////responsive
+@mixin gallerydesktop {
+  display: inline-block;
+  width: 480px;
+  article {
+    width: 480px;
+  }
+}
+@mixin gallerydesktopsmall {
+  display: inline-block;
+  width: auto;
+  article {
+    width: auto;
+  }
+}
+// @mixin gallerytab {
+//   display: inline-block;
+//   width: 280px;
+//   article {
+//     width: 280px;
+//   }
+// }
+
 ////////////////////////////////////contact page///////////////////
 
 ////////////////// button look styling//////////////////
