--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,31 +66,21 @@ body {
        border: 0px solid blue;
        background: $fireBrickGradient;
        width: 100%;
+       display: grid;
+       grid-template-columns: 1fr 1fr 1fr 1fr;
+       grid-template-rows: 10% 90%;
        h3 {
-         display: inline-block;
-         font-family: $secondfont;
-         font-size: 17px;
-         &:nth-child(1) {
-           margin-left: 6em;
-         }
-         &:nth-child(2) {
-           margin-left: 10em;
-         }
-         &:nth-child(3) {
-           margin-left: 10em;
-         }
-         &:nth-child(4) {
-           margin-left: 9em;
-         }
+         margin-left: 3em;
        }
        .homeImg {
-         height: 170px;
-         width: 170px;
-         display: inline-block;
-         margin-left: 54px;
+         height: 100%;
+         width: 100%;
        }
      }
      //////////////////////content//////////////
+     .content {
+       width: 100%;
+     }
      #camping {
        background-color: #b1706761;
        grid-area: section;
@@ -153,9 +143,14 @@ body {
 
    .sidebar {
       @include scrollB;
-
+      .heading {
+        width: 100%;
+        height: 100%;
+      }
       .picture {
-        width: 500px;
+        width: 100%;
+        // height: 100%;
+        // width: 500px;
         height: 300px;
         display: inline-block;
       }
@@ -169,43 +164,26 @@ body {
 
 }
 ///////////////////////responsive desktopview//////////////
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 1050px) {
   body {
     width: auto;
     section {
+      #images {
+        h3 {
+          margin-left: 6em;
+        }
+      }
       @include desktopview;
       .sidebar {
          @include scroll;
-
+         margin-left: 1em;
+         float: right;
          .picture {
-           width: 361px;
+           // width: 361px;
            height: 200px;
            display: block;
          }
        }
-       //////////////////////category images///////////
-       #images {
-           width: 100%;
-           h3 {
-             font-family: $secondfont;
-             &:nth-child(1) {
-               margin-left: 10em;
-             }
-             &:nth-child(2) {
-               margin-left: 18em;
-             }
-             &:nth-child(3) {
-               margin-left: 17em;
-             }
-             &:nth-child(4) {
-               margin-left: 17em;
-             }
-           }
-           .homeImg {
-             height: 250px;
-             width: 300px;
-           }
-         }
     }
     /////////////footer/////////////////////////
     footer {
